welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: not found: value x
	x = x + 1
        ^Variables:9: error: not found: value x
while(x != 0){
      ^